--- a/index.html
+++ b/index.html
@@ -6,10 +6,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New Developer Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>Welcome To</h1>
+            <h1><span class="orange-color">Tusar</span> World!</h1>
+            <h3>Programer and web developer</h3>
+            <p>You must saw me coding, and trying to creat website. But nobody pays me a dime for that work. That's why
+                I am
+                learning and mastering web development. I will not stop until I become the web Development Hero.</p>
+            <a class="link-button" target="_blank" href="https://github.com/abdulhakim10">HIRE ME</a>
+        </div>
+        <div class="half-width">
+            <img src="images/ahakim-bgr.png" alt="">
+        </div>
 
+    </section>
 </body>
 
 </html>
